--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,10 @@ dependencies:
 
   # UI Components
   flutter_svg: ^2.0.9
-  cached_network_image: ^3.3.1
+  cached_network_image: ^3.4.1
   flutter_screenutil: ^5.9.3
+  shimmer: ^3.0.0
+
 
   # Form Validation
   formz: ^0.6.1
@@ -49,6 +51,7 @@ dependencies:
   # Local Plugins
   neopop:
     path: ./local_plugins/neopop
+  cloud_firestore: ^4.17.5
   
 dev_dependencies:
   flutter_test:
