--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   neopop:
     path: ./local_plugins/neopop
   cloud_firestore: ^4.17.5
+  carousel_slider: ^5.1.1
   
 dev_dependencies:
   flutter_test:
