--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
     path: ./local_plugins/neopop
   cloud_firestore: ^4.17.5
   carousel_slider: ^5.1.1
+  logging: ^1.3.0
   
 dev_dependencies:
   flutter_test:
