--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 android/app/src/google-services.json
+android/app/src/debug/google-services.json
