--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   cloud_firestore: ^4.17.5
   carousel_slider: ^5.1.1
   logging: ^1.3.0
+  stream_chat_flutter: ^9.13.0
   
 dev_dependencies:
   flutter_test:
