--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   carousel_slider: ^5.1.1
   logging: ^1.3.0
   stream_chat_flutter: ^9.13.0
+  http: ^1.4.0
   
 dev_dependencies:
   flutter_test:
