feat: Refactor chat implementation to use environment variables for stream key and secret; update support chat page and add channel list functionality

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,6 @@
 {
   "name": "BattleNest",
   "type": "dart",
-  "flutterMode": "debug",
+  "flutterMode": "release",
   "args": [ "--no-enable-impeller"]
 }
