--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   logging: ^1.3.0
   stream_chat_flutter: ^9.13.0
   http: ^1.4.0
+  flutter_dotenv: ^5.2.1
   
 dev_dependencies:
   flutter_test:
