feat: Add Event Detail Screen with static data and UI components
feat: Implement Section Title component for homepage sections

feat: Create Slider Block component for tournament banners

feat: Develop Tournament Card component for displaying tournament details

feat: Add Upcoming Tournament Card component for upcoming events

feat: Build Dashboard for homepage with MobX state management

feat: Create Home Tournament View to display tournaments and events

feat: Implement Home Screen with navigation and drawer

feat: Define Section Model for managing homepage sections

feat: Create Home Content Store for fetching and managing sections

feat: Add Home Navigation ViewModel for managing tab navigation

feat: Implement Create Tournament Screen with form fields and dropdowns

feat: Define Dropdown Item model for tournament dropdowns

feat: Create Tournament Dropdown Store for managing dropdown data

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,14 @@
 {
-  "name": "BattleNest",
-  "type": "dart",
-  "flutterMode": "release",
-  "args": [ "--no-enable-impeller"]
-}
+    "version": "0.2.0",
+    "configurations": [
+        {
+            "name": "BattleNest",
+            "request": "launch",
+            "type": "dart",
+            "toolArgs": [
+                "--no-enable-impeller"
+
+            ]
+        },
+    ]
+  }
