feat: Integrate Firebase Messaging for push notifications and clean up code structure

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   stream_chat_flutter: ^9.13.0
   http: ^1.4.0
   flutter_dotenv: ^5.2.1
+  firebase_messaging: ^14.7.10
   
 dev_dependencies:
   flutter_test:
